# yarchi

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: default-ci.yaml  release.yaml
src/: interpreter.rs  main.rs
src/interpreter/: chip8.rs  config.rs
src/interpreter/chip8/: instruction.rs  operations.rs  program_counter.rs
